tela de resultado alterada

--- a/calculadora.html
+++ b/calculadora.html
@@ -14,7 +14,7 @@
     <main>
         <div id="corpo">
             <h1>Calculadora</h1>
-            <div class="telaresult"> <p>tela de resultado</p></div>
+            <div class="telaresult"> <p></p></div>
 
             <div class="teclado">
                 <table>
